--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^2.1.0",
     "graphql": "^14.0.2",
-    "graphql-tools": "^4.0.4"
+    "graphql-tools": "^4.0.4",    
+    "outputjsc": "0.0.2"
   }
 }
